updated with more tags knowledge

--- a/index.html
+++ b/index.html
@@ -2,17 +2,42 @@
 <html lang='en'>
 </html>
 <head>
-  <title> My Webpage</title>
+  <title> My Webpage 'What people see in the tab bar' </title>
 </head>
 <body>
-  <h1>The webpage main heading </h1>
-  <p> Some Content. </p>
-  <h2> Heading 2 </h2>
+  <h1>The webpage main heading 'h1' </h1>
+  <p style='font-family: Trebuchet MS'> Some Content. </p>
+  <h2> Heading 2 'h2' </h2>
     <em> this content is emphasized </em>
-  <h3> another heading </h3>
+  <h3> another heading 'h3' </h3>
     <!.. nobody sees this on the browser..>
-  <h4> fourth heading </h4>
+  <h4> fourth heading 'h4 </h4>
     <p> <a href="https://google.com">This is a link</a></p>
-  <h5> heading number 5 </h5>
-  <h6> no more heading after this </h6>
+  <h5> heading number 5 'h5' </h5>
+  <h6> no more heading after this 'h6' </h6>
+  <h1> The new 'h1' heading about images </h1>
+    <p> 'img/' is the tag used to place an image on page </p>
+    <p> 'src' is a required attribute with the image location </p>
+    <p> 'alt' require  attribute provides text when image can't be rendered </p>
+    <p> 'width' and 'height' specifies image size in pixel. Without these attributes an image will be rendered in its original size. </p>
+    <p> Nesting 'img/' tag inside the 'a' tag makes them clickable to their 'URL' source. </p>
+    <p> We can use the HTML 'figure' which contains 'figcaption' and 'img/' elements. </p>
+    <p> 'figcaption' element specifies the caption on the page </p>
+  <h2> The Audio webpage heading </h2>
+    <p> 'audio' element contains a 'source' element </p>
+    <p> 'source' element caontains the source 'src' for the audio </p>
+    <p> 'controls' attribute displays standard playback controls such as play, pause, and volume. </p>
+    <p> Fallback message is what's diplayed when a user browser doesn't support audio element </p>
+    <p> 'autoplay' element starts audio as soon as page loads </p>
+    <p> 'loop' causes audio to loop continuously </p>
+    <p> 'volume' sets audio defualt volume '0.0 (silent)' to '1.0 (full volume)' </p>
+  <h3> Video Embedding </h3>
+    <p> 'video' element contains the 'source' element 'src' and the 'type' element of the video </p>
+    <p> 'controls' attribute displays standard playback controls </p>
+    <p> 'autoplay' element starts audio as soon as page loads </p>
+    <p> 'loop' causes audio to loop continuously </p>
+    <p> 'muted' mutes audio by default </p>
+    <p> 'volume' sets audio defualt volume '0.0 (silent)' to '1.0 (full volume)' </p>
+    <p> width and height - specifies the width and height of the video player in pixels. </p>
 </body>
+
